TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "124210209821344" [label="Start"];
  "124210209821344" -> "124210209830848";
  "124210209830848" [label="Code"];
  "124210209830848" -> "124210209832240";
  "124210209832240" [label="Function"];
  "124210209832240" -> "124210209829216";
  "124210209832240" -> "124210209829792";
  "124210209832240" -> "124210209819472";
  "124210209829216" [label="main IDENTIFIER"];
  "124210209829792" [label="Parameters"];
  "124210209819472" [label="Code"];
  "124210209819472" -> "124210209828832";
  "124210209819472" -> "124210209828352";
  "124210209819472" -> "124210209817888";
  "124210209828832" [label="Code"];
  "124210209828832" -> "124210209832288";
  "124210209832288" [label="Declaration"];
  "124210209832288" -> "124210209830128";
  "124210209832288" -> "124210209832000";
  "124210209830128" [label="x IDENTIFIER"];
  "124210209832000" [label="1 INT"];
  "124210209828352" [label="Code"];
  "124210209828352" -> "124210209818848";
  "124210209818848" [label="Declaration"];
  "124210209818848" -> "124210209821488";
  "124210209818848" -> "124210209832192";
  "124210209821488" [label="x IDENTIFIER"];
  "124210209832192" [label="2 INT"];
  "124210209817888" [label="Return"];
  "124210209817888" -> "124210209832432";
  "124210209832432" [label="0 INT"];
}
